--- a/com/org/ui/plrecord.ui
+++ b/com/org/ui/plrecord.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>632</width>
-    <height>469</height>
+    <width>960</width>
+    <height>490</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,8 +18,8 @@
     <rect>
      <x>10</x>
      <y>90</y>
-     <width>611</width>
-     <height>371</height>
+     <width>941</width>
+     <height>381</height>
     </rect>
    </property>
    <property name="horizontalScrollBarPolicy">
@@ -41,16 +41,6 @@
     </property>
    </column>
   </widget>
-  <widget class="QGraphicsView" name="graphicsView">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>20</y>
-     <width>151</width>
-     <height>51</height>
-    </rect>
-   </property>
-  </widget>
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
@@ -67,7 +57,7 @@
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>370</x>
+     <x>330</x>
      <y>40</y>
      <width>91</width>
      <height>21</height>
@@ -80,27 +70,85 @@
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
-     <x>480</x>
+     <x>420</x>
      <y>40</y>
-     <width>75</width>
+     <width>51</width>
      <height>23</height>
     </rect>
    </property>
    <property name="text">
     <string/>
+   </property>
+   <property name="icon">
+    <iconset>
+     <normaloff>../window/img/of.png</normaloff>../window/img/of.png</iconset>
+   </property>
+   <property name="iconSize">
+    <size>
+     <width>53</width>
+     <height>21</height>
+    </size>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButton_2">
    <property name="geometry">
     <rect>
-     <x>260</x>
+     <x>250</x>
      <y>40</y>
-     <width>75</width>
-     <height>23</height>
+     <width>51</width>
+     <height>21</height>
     </rect>
    </property>
    <property name="text">
     <string/>
+   </property>
+   <property name="icon">
+    <iconset>
+     <normaloff>../window/img/on.png</normaloff>../window/img/on.png</iconset>
+   </property>
+   <property name="iconSize">
+    <size>
+     <width>53</width>
+     <height>21</height>
+    </size>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_3">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>20</y>
+     <width>54</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="pixmap">
+    <pixmap>../window/img/policylogo.png</pixmap>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_4">
+   <property name="geometry">
+    <rect>
+     <x>70</x>
+     <y>30</y>
+     <width>81</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="lineWidth">
+    <number>0</number>
+   </property>
+   <property name="text">
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:12pt; font-weight:600;&quot;&gt;报警信息&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+   </property>
+   <property name="textFormat">
+    <enum>Qt::RichText</enum>
+   </property>
+   <property name="margin">
+    <number>2</number>
    </property>
   </widget>
  </widget>
